...

    },
    "Active" : {
      "comment" : "Label for a NOTAM badge that indicates the NOTAM is currently active.",
      "isCommentAutoGenerated" : true
    },
    "Add Scenario" : {
      "comment" : "A button that adds a new scenario.",
      "isCommentAutoGenerated" : true
    },
    "Adjustments" : {
      "comment" : "A section header for the \"Adjustments\" tab in the scenario detail view.",
      "isCommentAutoGenerated" : true
...

    },
    "Distance & Length" : {
      "comment" : "A section header in the Units Settings view, describing distance and length-related settings.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {
      "comment" : "The text for a button that dismisses a view.",
      "isCommentAutoGenerated" : true
    },
    "Download Airport Data" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Fuel Volume" : {
      "comment" : "A label for the fuel volume unit picker.",
      "isCommentAutoGenerated" : true
    },
    "G1" : {

    },
    "G2" : {

    },
    "G2+" : {
...
      "comment" : "A unit of speed, specifically knots.",
      "isCommentAutoGenerated" : true
    },
    "Landing" : {

    },
    "Landing Fuel" : {

    },
    "Landing Report" : {
      "comment" : "Title of the landing report page.",
      "isCommentAutoGenerated" : true
    },
...
      "comment" : "A section header for the overrides in the scenario detail view.",
      "isCommentAutoGenerated" : true
    },
    "P/N" : {

    },
    "Payload" : {

    },
    "Pending" : {

    },
    "Performance" : {
...
      "isCommentAutoGenerated" : true
    },
    "Scenarios" : {
      "comment" : "The title of the settings view related to flight scenarios.",
      "isCommentAutoGenerated" : true
    },
    "Search" : {

    },
    "Serials" : {

    },
    "Settings" : {
...
    "Tab" : {

    },
    "Tabular" : {

    },
    "Takeoff" : {

    },
    "Takeoff Fuel" : {

    },
    "Takeoff Report" : {
      "comment" : "Title of the takeoff report page.",
      "isCommentAutoGenerated" : true
    },
    "Takeoff Scenarios" : {
      "comment" : "A section in the settings view that lists takeoff scenarios.",
      "isCommentAutoGenerated" : true
...
