...
  private var weightUnit

  var body: some View {
    Form {
      Section("Scenario Name") {
        TextField("Name", text: $scenario.name)
          .accessibilityIdentifier("scenarioNameField")
      }

      Section("Adjustments") {
        LabeledContent("OAT Delta") {
          MeasurementField(
            "Temperature",
            value: $scenario.deltaTemperature,
            unit: temperatureUnit,
            format: .temperature(plusSign: true)
          )
          .accessibilityIdentifier("OATDeltaField")
        }

        LabeledContent("Wind Speed Delta") {
          MeasurementField(
            "Speed",
            value: $scenario.deltaWindSpeed,
...
          MeasurementField(
            "Weight",
            value: $scenario.deltaWeight,
            unit: weightUnit,
            format: .weight(plusSign: true)
          )
          .accessibilityIdentifier("weightDeltaField")
        }
      }

      Section("Overrides") {
        Picker("Flap Setting", selection: $scenario.flapSettingOverride) {
          Text("None").tag(nil as String?)
...
